Changed PKs and added nbconverting

--- a/1_backfill_feature_groups.ipynb
+++ b/1_backfill_feature_groups.ipynb
@@ -276,7 +276,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>city</th>\n",
        "      <th>aqi</th>\n",
        "      <th>date</th>\n",
@@ -301,7 +300,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>6</td>\n",
        "      <td>1662411600000</td>\n",
@@ -324,7 +322,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>2</td>\n",
        "      <td>1662498000000</td>\n",
@@ -347,7 +344,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>4</td>\n",
        "      <td>1662584400000</td>\n",
@@ -370,7 +366,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>2</td>\n",
        "      <td>1662670800000</td>\n",
@@ -393,7 +388,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Malmo</td>\n",
        "      <td>23</td>\n",
        "      <td>1662411600000</td>\n",
@@ -419,26 +413,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   index   city  aqi           date  iaqi_h  iaqi_p  iaqi_pm10  iaqi_t  \\\n",
-       "0      0   Kyiv    6  1662411600000   98.78  1022.7          2   13.91   \n",
-       "1      1   Kyiv    2  1662498000000   65.58  1020.0          1   21.02   \n",
-       "2      2   Kyiv    4  1662584400000   99.90  1017.6          2   12.45   \n",
-       "3      3   Kyiv    2  1662670800000   99.90  1021.3          1   10.00   \n",
-       "4      4  Malmo   23  1662411600000   54.50  1019.0          4   17.30   \n",
+       "    city  aqi           date  iaqi_h  iaqi_p  iaqi_pm10  iaqi_t  o3_avg  \\\n",
+       "0   Kyiv    6  1662411600000   98.78  1022.7          2   13.91      19   \n",
+       "1   Kyiv    2  1662498000000   65.58  1020.0          1   21.02      22   \n",
+       "2   Kyiv    4  1662584400000   99.90  1017.6          2   12.45      22   \n",
+       "3   Kyiv    2  1662670800000   99.90  1021.3          1   10.00      20   \n",
+       "4  Malmo   23  1662411600000   54.50  1019.0          4   17.30      27   \n",
        "\n",
-       "   o3_avg  o3_max  o3_min  pm10_avg  pm10_max  pm10_min  pm25_avg  pm25_max  \\\n",
-       "0      19      27      11         7        11         4        23        39   \n",
-       "1      22      32      10         9        12         5        29        43   \n",
-       "2      22      32      10         9        12         5        29        43   \n",
-       "3      20      33       6        10        17         5        33        56   \n",
-       "4      27      32      24         5         5         3        10        11   \n",
+       "   o3_max  o3_min  pm10_avg  pm10_max  pm10_min  pm25_avg  pm25_max  pm25_min  \\\n",
+       "0      27      11         7        11         4        23        39        14   \n",
+       "1      32      10         9        12         5        29        43        15   \n",
+       "2      32      10         9        12         5        29        43        15   \n",
+       "3      33       6        10        17         5        33        56        16   \n",
+       "4      32      24         5         5         3        10        11         8   \n",
        "\n",
-       "   pm25_min  uvi_avg  uvi_max  uvi_min  \n",
-       "0        14        0        0        0  \n",
-       "1        15        0        0        0  \n",
-       "2        15        0        0        0  \n",
-       "3        16        0        0        0  \n",
-       "4         8        1        1        1  "
+       "   uvi_avg  uvi_max  uvi_min  \n",
+       "0        0        0        0  \n",
+       "1        0        0        0  \n",
+       "2        0        0        0  \n",
+       "3        0        0        0  \n",
+       "4        1        1        1  "
       ]
      },
      "execution_count": 3,
@@ -449,7 +443,6 @@
    "source": [
     "df_air_quality.date = df_air_quality.date.apply(timestamp_2_time)\n",
     "df_air_quality.sort_values(by = ['city','date'],inplace = True,ignore_index = True)\n",
-    "df_air_quality.reset_index(inplace = True)\n",
     "\n",
     "df_air_quality.head()"
    ]
@@ -708,7 +701,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>city</th>\n",
        "      <th>date</th>\n",
        "      <th>tempmax</th>\n",
@@ -718,6 +710,7 @@
        "      <th>feelslikemin</th>\n",
        "      <th>feelslike</th>\n",
        "      <th>dew</th>\n",
+       "      <th>humidity</th>\n",
        "      <th>...</th>\n",
        "      <th>windgust</th>\n",
        "      <th>windspeed</th>\n",
@@ -734,7 +727,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>1662411600000</td>\n",
        "      <td>17.7</td>\n",
@@ -744,6 +736,7 @@
        "      <td>4.6</td>\n",
        "      <td>11.5</td>\n",
        "      <td>1.8</td>\n",
+       "      <td>55.3</td>\n",
        "      <td>...</td>\n",
        "      <td>24.5</td>\n",
        "      <td>9.7</td>\n",
@@ -758,7 +751,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>1662498000000</td>\n",
        "      <td>17.7</td>\n",
@@ -768,6 +760,7 @@
        "      <td>4.6</td>\n",
        "      <td>11.5</td>\n",
        "      <td>1.8</td>\n",
+       "      <td>55.3</td>\n",
        "      <td>...</td>\n",
        "      <td>24.5</td>\n",
        "      <td>9.7</td>\n",
@@ -782,7 +775,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>1662584400000</td>\n",
        "      <td>21.1</td>\n",
@@ -792,6 +784,7 @@
        "      <td>7.9</td>\n",
        "      <td>14.3</td>\n",
        "      <td>3.3</td>\n",
+       "      <td>50.9</td>\n",
        "      <td>...</td>\n",
        "      <td>24.8</td>\n",
        "      <td>9.7</td>\n",
@@ -806,7 +799,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>1662670800000</td>\n",
        "      <td>17.5</td>\n",
@@ -816,6 +808,7 @@
        "      <td>5.7</td>\n",
        "      <td>12.1</td>\n",
        "      <td>4.6</td>\n",
+       "      <td>61.5</td>\n",
        "      <td>...</td>\n",
        "      <td>36.4</td>\n",
        "      <td>14.8</td>\n",
@@ -830,7 +823,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Malmo</td>\n",
        "      <td>1662411600000</td>\n",
        "      <td>20.6</td>\n",
@@ -840,6 +832,7 @@
        "      <td>12.4</td>\n",
        "      <td>15.9</td>\n",
        "      <td>9.3</td>\n",
+       "      <td>66.6</td>\n",
        "      <td>...</td>\n",
        "      <td>44.6</td>\n",
        "      <td>23.7</td>\n",
@@ -854,23 +847,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index   city           date  tempmax  tempmin  temp  feelslikemax  \\\n",
-       "0      0   Kyiv  1662411600000     17.7      4.6  11.5          17.7   \n",
-       "1      1   Kyiv  1662498000000     17.7      4.6  11.5          17.7   \n",
-       "2      2   Kyiv  1662584400000     21.1      7.9  14.3          21.1   \n",
-       "3      3   Kyiv  1662670800000     17.5      6.6  12.4          17.5   \n",
-       "4      4  Malmo  1662411600000     20.6     12.4  15.9          20.6   \n",
+       "    city           date  tempmax  tempmin  temp  feelslikemax  feelslikemin  \\\n",
+       "0   Kyiv  1662411600000     17.7      4.6  11.5          17.7           4.6   \n",
+       "1   Kyiv  1662498000000     17.7      4.6  11.5          17.7           4.6   \n",
+       "2   Kyiv  1662584400000     21.1      7.9  14.3          21.1           7.9   \n",
+       "3   Kyiv  1662670800000     17.5      6.6  12.4          17.5           5.7   \n",
+       "4  Malmo  1662411600000     20.6     12.4  15.9          20.6          12.4   \n",
        "\n",
-       "   feelslikemin  feelslike  dew  ...  windgust  windspeed  winddir  pressure  \\\n",
-       "0           4.6       11.5  1.8  ...      24.5        9.7    267.0    1022.3   \n",
-       "1           4.6       11.5  1.8  ...      24.5        9.7    267.0    1022.3   \n",
-       "2           7.9       14.3  3.3  ...      24.8        9.7    132.9    1019.4   \n",
-       "3           5.7       12.1  4.6  ...      36.4       14.8     87.8    1022.5   \n",
-       "4          12.4       15.9  9.3  ...      44.6       23.7     97.9    1018.4   \n",
+       "   feelslike  dew  humidity  ...  windgust  windspeed  winddir  pressure  \\\n",
+       "0       11.5  1.8      55.3  ...      24.5        9.7    267.0    1022.3   \n",
+       "1       11.5  1.8      55.3  ...      24.5        9.7    267.0    1022.3   \n",
+       "2       14.3  3.3      50.9  ...      24.8        9.7    132.9    1019.4   \n",
+       "3       12.1  4.6      61.5  ...      36.4       14.8     87.8    1022.5   \n",
+       "4       15.9  9.3      66.6  ...      44.6       23.7     97.9    1018.4   \n",
        "\n",
        "   cloudcover  visibility  solarradiation  solarenergy  uvindex  \\\n",
        "0        34.8        24.1           227.5         19.6      7.0   \n",
@@ -886,7 +879,7 @@
        "3  Rain, Partially cloudy  \n",
        "4        Partially cloudy  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
      "execution_count": 5,
@@ -897,7 +890,6 @@
    "source": [
     "df_weather.date = df_weather.date.apply(timestamp_2_time)\n",
     "df_weather.sort_values(by = ['city','date'],inplace = True,ignore_index = True)\n",
-    "df_weather.reset_index(inplace = True)\n",
     "\n",
     "df_weather.head()"
    ]
@@ -962,13 +954,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/167/fs/109/fg/866\n"
+      "https://c.app.hopsworks.ai:443/p/167/fs/109/fg/871\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5d2cdcf4e1b4cb6a68e684c63f630b9",
+       "model_id": "2e9af42c4d3746c7b2a45315ec23a0f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -991,7 +983,7 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x7f793369b430>, None)"
+       "(<hsfs.core.job.Job at 0x7f7b806cd1c0>, None)"
       ]
      },
      "execution_count": 7,
@@ -1004,7 +996,7 @@
     "        name = 'air_quality_fg',\n",
     "        description = 'Air Quality characteristics of each day',\n",
     "        version = 1,\n",
-    "        primary_key = ['index'],\n",
+    "        primary_key = ['city','date'],\n",
     "        online_enabled = True,\n",
     "        event_time = ['date']\n",
     "    )    \n",
@@ -1031,13 +1023,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/167/fs/109/fg/867\n"
+      "https://c.app.hopsworks.ai:443/p/167/fs/109/fg/872\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5aec01a09d034874802c096429beef2b",
+       "model_id": "bd2b81ed7e7e47dea97a908141dc447e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1060,7 +1052,7 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x7f79336a6f40>, None)"
+       "(<hsfs.core.job.Job at 0x7f7b806ecc70>, None)"
       ]
      },
      "execution_count": 8,
@@ -1073,7 +1065,7 @@
     "        name = 'weather_fg',\n",
     "        description = 'Weather characteristics of each day',\n",
     "        version = 1,\n",
-    "        primary_key = ['index'],\n",
+    "        primary_key = ['city','date'],\n",
     "        online_enabled = True,\n",
     "        event_time = ['date']\n",
     "    )    \n",
