--- a/2_feature_pipeline.ipynb
+++ b/2_feature_pipeline.ipynb
@@ -148,21 +148,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Kyiv</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>99.9</td>\n",
-       "      <td>1007.8</td>\n",
        "      <td>2</td>\n",
-       "      <td>13.37</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>99.9</td>\n",
+       "      <td>1006.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>14</td>\n",
        "      <td>22</td>\n",
-       "      <td>28</td>\n",
-       "      <td>18</td>\n",
-       "      <td>8</td>\n",
-       "      <td>11</td>\n",
-       "      <td>6</td>\n",
-       "      <td>29</td>\n",
-       "      <td>41</td>\n",
-       "      <td>19</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>38</td>\n",
+       "      <td>45</td>\n",
+       "      <td>24</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -171,20 +171,20 @@
        "      <th>1</th>\n",
        "      <td>Stockholm</td>\n",
        "      <td>16</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>1017.3</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>1014.0</td>\n",
        "      <td>16</td>\n",
-       "      <td>16.10</td>\n",
-       "      <td>24</td>\n",
-       "      <td>29</td>\n",
-       "      <td>20</td>\n",
-       "      <td>5</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>27</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
        "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
        "      <td>18</td>\n",
-       "      <td>8</td>\n",
+       "      <td>11</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -192,21 +192,21 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Sundsvall</td>\n",
-       "      <td>19</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>1013.6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>15.00</td>\n",
-       "      <td>23</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>47.3</td>\n",
+       "      <td>1010.8</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>21</td>\n",
        "      <td>29</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4</td>\n",
+       "      <td>15</td>\n",
        "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10</td>\n",
-       "      <td>12</td>\n",
        "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -214,21 +214,21 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Malmo</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1662757200000</td>\n",
-       "      <td>76.2</td>\n",
-       "      <td>1014.3</td>\n",
-       "      <td>7</td>\n",
-       "      <td>16.60</td>\n",
-       "      <td>25</td>\n",
-       "      <td>35</td>\n",
-       "      <td>20</td>\n",
-       "      <td>11</td>\n",
-       "      <td>14</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>65.5</td>\n",
+       "      <td>1013.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
        "      <td>8</td>\n",
+       "      <td>29</td>\n",
        "      <td>35</td>\n",
-       "      <td>46</td>\n",
-       "      <td>25</td>\n",
+       "      <td>23</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -238,17 +238,17 @@
        "</div>"
       ],
       "text/plain": [
-       "        city aqi           date  iaqi_h  iaqi_p  iaqi_pm10  iaqi_t  o3_avg  \\\n",
-       "0       Kyiv   5  1662843600000    99.9  1007.8          2   13.37      22   \n",
-       "1  Stockholm  16  1662843600000    71.0  1017.3         16   16.10      24   \n",
-       "2  Sundsvall  19  1662843600000    68.0  1013.6         12   15.00      23   \n",
-       "3      Malmo   -  1662757200000    76.2  1014.3          7   16.60      25   \n",
+       "        city  aqi           date  iaqi_h  iaqi_p  iaqi_pm10  iaqi_t  o3_avg  \\\n",
+       "0       Kyiv    2  1662930000000    99.9  1006.4          1    13.4      14   \n",
+       "1  Stockholm   16  1662930000000    55.0  1014.0         16    18.0      22   \n",
+       "2  Sundsvall   30  1662930000000    47.3  1010.8         20    18.1      21   \n",
+       "3      Malmo   18  1662930000000    65.5  1013.3          5    20.0      19   \n",
        "\n",
        "   o3_max  o3_min  pm10_avg  pm10_max  pm10_min  pm25_avg  pm25_max  pm25_min  \\\n",
-       "0      28      18         8        11         6        29        41        19   \n",
-       "1      29      20         5         7         4        12        18         8   \n",
-       "2      29      16         4         5         2        10        12         6   \n",
-       "3      35      20        11        14         8        35        46        25   \n",
+       "0      22       7        10        12         7        38        45        24   \n",
+       "1      27      19         6         7         5        15        18        11   \n",
+       "2      29      15         5         6         3        11        13         8   \n",
+       "3      27      10        10        12         8        29        35        23   \n",
        "\n",
        "   uvi_avg  uvi_max  uvi_min  \n",
        "0        0        0        0  \n",
@@ -269,16 +269,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "12c8281f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_air_quality.aqi = df_air_quality.aqi.replace('-',24)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5441afc6",
    "metadata": {},
@@ -288,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "be60bd25",
    "metadata": {},
    "outputs": [
@@ -340,97 +330,97 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Kyiv</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>16.7</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>1662930000000</td>\n",
        "      <td>13.9</td>\n",
        "      <td>11.3</td>\n",
-       "      <td>85.2</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>88.9</td>\n",
        "      <td>...</td>\n",
-       "      <td>43.9</td>\n",
-       "      <td>19.1</td>\n",
-       "      <td>185.4</td>\n",
-       "      <td>1009.9</td>\n",
-       "      <td>91.9</td>\n",
-       "      <td>22.4</td>\n",
-       "      <td>69.9</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>256.9</td>\n",
+       "      <td>1007.5</td>\n",
+       "      <td>98.6</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>29.4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>Rain, Overcast</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Stockholm</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>12.6</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>8.7</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>77.0</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>80.9</td>\n",
        "      <td>...</td>\n",
-       "      <td>19.4</td>\n",
-       "      <td>9.2</td>\n",
-       "      <td>141.6</td>\n",
-       "      <td>1016.7</td>\n",
-       "      <td>73.6</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>25.9</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>133.9</td>\n",
+       "      <td>1014.8</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>119.3</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>Partially cloudy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Sundsvall</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>11.4</td>\n",
-       "      <td>7.9</td>\n",
-       "      <td>79.8</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>10.3</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>80.4</td>\n",
        "      <td>...</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>253.8</td>\n",
-       "      <td>1016.3</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>155.0</td>\n",
-       "      <td>13.4</td>\n",
+       "      <td>25.9</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>248.1</td>\n",
+       "      <td>1012.5</td>\n",
+       "      <td>95.1</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>112.1</td>\n",
+       "      <td>9.5</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>Partially cloudy</td>\n",
+       "      <td>Overcast</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Malmo</td>\n",
-       "      <td>1662843600000</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>15.3</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>13.6</td>\n",
-       "      <td>15.3</td>\n",
-       "      <td>12.8</td>\n",
-       "      <td>85.7</td>\n",
+       "      <td>1662930000000</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>85.6</td>\n",
        "      <td>...</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>14.2</td>\n",
-       "      <td>215.6</td>\n",
-       "      <td>1016.1</td>\n",
-       "      <td>70.8</td>\n",
-       "      <td>11.3</td>\n",
-       "      <td>66.3</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>221.7</td>\n",
+       "      <td>1015.7</td>\n",
+       "      <td>71.7</td>\n",
+       "      <td>14.1</td>\n",
+       "      <td>168.8</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>7.0</td>\n",
        "      <td>Partially cloudy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -440,33 +430,33 @@
       ],
       "text/plain": [
        "        city           date  tempmax  tempmin  temp  feelslikemax  \\\n",
-       "0       Kyiv  1662843600000     16.7     12.0  13.9          16.7   \n",
-       "1  Stockholm  1662843600000     16.0      9.0  12.6          16.0   \n",
-       "2  Sundsvall  1662843600000     17.0      8.0  11.5          17.0   \n",
-       "3      Malmo  1662843600000     17.4     13.6  15.3          17.4   \n",
+       "0       Kyiv  1662930000000     13.9     11.3  12.5          13.9   \n",
+       "1  Stockholm  1662930000000     18.9      6.0  12.3          18.9   \n",
+       "2  Sundsvall  1662930000000     16.3      4.9  10.3          16.3   \n",
+       "3      Malmo  1662930000000     18.5      8.5  14.1          18.5   \n",
        "\n",
        "   feelslikemin  feelslike   dew  humidity  ...  windgust  windspeed  winddir  \\\n",
-       "0          12.0       13.9  11.3      85.2  ...      43.9       19.1    185.4   \n",
-       "1           8.7       12.5   8.5      77.0  ...      19.4        9.2    141.6   \n",
-       "2           7.5       11.4   7.9      79.8  ...      18.7       16.1    253.8   \n",
-       "3          13.6       15.3  12.8      85.7  ...      31.0       14.2    215.6   \n",
+       "0          11.3       12.5  10.7      88.9  ...      24.1       10.1    256.9   \n",
+       "1           6.0       12.2   8.6      80.9  ...      25.9       11.2    133.9   \n",
+       "2           2.4        9.5   7.0      80.4  ...      25.9       12.6    248.1   \n",
+       "3           8.5       14.1  11.6      85.6  ...      23.0       10.4    221.7   \n",
        "\n",
        "   pressure  cloudcover  visibility  solarradiation  solarenergy  uvindex  \\\n",
-       "0    1009.9        91.9        22.4            69.9          5.9      3.0   \n",
-       "1    1016.7        73.6        11.8            72.0          6.2      4.0   \n",
-       "2    1016.3        75.0        11.8           155.0         13.4      5.0   \n",
-       "3    1016.1        70.8        11.3            66.3          5.7      4.0   \n",
+       "0    1007.5        98.6        19.6            29.4          2.5      1.0   \n",
+       "1    1014.8        77.5        13.0           119.3         10.4      5.0   \n",
+       "2    1012.5        95.1        15.2           112.1          9.5      5.0   \n",
+       "3    1015.7        71.7        14.1           168.8         14.7      7.0   \n",
        "\n",
        "         conditions  \n",
        "0    Rain, Overcast  \n",
        "1  Partially cloudy  \n",
-       "2  Partially cloudy  \n",
+       "2          Overcast  \n",
        "3  Partially cloudy  \n",
        "\n",
        "[4 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4530f803",
    "metadata": {},
    "outputs": [
@@ -520,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4e4f3e0c",
    "metadata": {},
    "outputs": [],
@@ -537,52 +527,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4efe32a4",
-   "metadata": {},
-   "source": [
-    "### <span style=\"color:#ff5f27;\"> ⚜️ Index column preparation </span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5e3af0c5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-09-11 21:34:08,256 INFO: USE `maksym00_featurestore`\n",
-      "2022-09-11 21:34:09,316 INFO: SELECT `fg0`.`index` `index`, `fg0`.`city` `city`, `fg0`.`aqi` `aqi`, `fg0`.`date` `date`, `fg0`.`iaqi_h` `iaqi_h`, `fg0`.`iaqi_p` `iaqi_p`, `fg0`.`iaqi_pm10` `iaqi_pm10`, `fg0`.`iaqi_t` `iaqi_t`, `fg0`.`o3_avg` `o3_avg`, `fg0`.`o3_max` `o3_max`, `fg0`.`o3_min` `o3_min`, `fg0`.`pm10_avg` `pm10_avg`, `fg0`.`pm10_max` `pm10_max`, `fg0`.`pm10_min` `pm10_min`, `fg0`.`pm25_avg` `pm25_avg`, `fg0`.`pm25_max` `pm25_max`, `fg0`.`pm25_min` `pm25_min`, `fg0`.`uvi_avg` `uvi_avg`, `fg0`.`uvi_max` `uvi_max`, `fg0`.`uvi_min` `uvi_min`\n",
-      "FROM `maksym00_featurestore`.`air_quality_fg_1` `fg0`\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UserWarning: pandas only support SQLAlchemy connectable(engine/connection) ordatabase string URI or sqlite3 DBAPI2 connectionother DBAPI2 objects are not tested, please consider using SQLAlchemy\n"
-     ]
-    }
-   ],
-   "source": [
-    "index_latest = air_quality_fg.read()['index'].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "67148d0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepare_index(df_air_quality,index_latest)\n",
-    "prepare_index(df_weather,index_latest)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5aef353d",
    "metadata": {},
    "source": [
@@ -591,14 +535,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "f81bb922",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ae89e8e013894648a649d19a29f155dd",
+       "model_id": "30e3fbb8350146079e3b51bc79981869",
        "version_major": 2,
        "version_minor": 0
       },
@@ -621,10 +565,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x7fa7f9eb5f10>, None)"
+       "(<hsfs.core.job.Job at 0x7f7d0a4ced90>, None)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,14 +579,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "be0c498e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc1c278c44c946a7a063794ac774c115",
+       "model_id": "18c8b6d43752443dad6190c4fa1c83a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -665,10 +609,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x7fa7f9ec05e0>, None)"
+       "(<hsfs.core.job.Job at 0x7f7d0a197df0>, None)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
