--- a/3_feature_views_and_training_dataset.ipynb
+++ b/3_feature_views_and_training_dataset.ipynb
@@ -95,12 +95,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-09-11 21:36:15,011 INFO: USE `maksym00_featurestore`\n",
-      "2022-09-11 21:36:16,044 INFO: WITH right_fg0 AS (SELECT *\n",
-      "FROM (SELECT `fg1`.`index` `index`, `fg1`.`city` `city`, `fg1`.`aqi` `aqi`, `fg1`.`date` `date`, `fg1`.`iaqi_h` `iaqi_h`, `fg1`.`iaqi_p` `iaqi_p`, `fg1`.`iaqi_pm10` `iaqi_pm10`, `fg1`.`iaqi_t` `iaqi_t`, `fg1`.`o3_avg` `o3_avg`, `fg1`.`o3_max` `o3_max`, `fg1`.`o3_min` `o3_min`, `fg1`.`pm10_avg` `pm10_avg`, `fg1`.`pm10_max` `pm10_max`, `fg1`.`pm10_min` `pm10_min`, `fg1`.`pm25_avg` `pm25_avg`, `fg1`.`pm25_max` `pm25_max`, `fg1`.`pm25_min` `pm25_min`, `fg1`.`uvi_avg` `uvi_avg`, `fg1`.`uvi_max` `uvi_max`, `fg1`.`uvi_min` `uvi_min`, `fg1`.`index` `join_pk_index`, `fg1`.`date` `join_evt_date`, `fg0`.`tempmax` `tempmax`, `fg0`.`tempmin` `tempmin`, `fg0`.`temp` `temp`, `fg0`.`feelslikemax` `feelslikemax`, `fg0`.`feelslikemin` `feelslikemin`, `fg0`.`feelslike` `feelslike`, `fg0`.`dew` `dew`, `fg0`.`humidity` `humidity`, `fg0`.`precip` `precip`, `fg0`.`precipprob` `precipprob`, `fg0`.`precipcover` `precipcover`, `fg0`.`snow` `snow`, `fg0`.`snowdepth` `snowdepth`, `fg0`.`windgust` `windgust`, `fg0`.`windspeed` `windspeed`, `fg0`.`winddir` `winddir`, `fg0`.`pressure` `pressure`, `fg0`.`cloudcover` `cloudcover`, `fg0`.`visibility` `visibility`, `fg0`.`solarradiation` `solarradiation`, `fg0`.`solarenergy` `solarenergy`, `fg0`.`uvindex` `uvindex`, `fg0`.`conditions` `conditions`, RANK() OVER (PARTITION BY `fg1`.`index`, `fg1`.`city`, `fg1`.`date`, `fg1`.`date` ORDER BY `fg0`.`date` DESC) pit_rank_hopsworks\n",
+      "2022-09-12 15:21:44,470 INFO: USE `maksym00_featurestore`\n",
+      "2022-09-12 15:21:45,676 INFO: WITH right_fg0 AS (SELECT *\n",
+      "FROM (SELECT `fg1`.`city` `city`, `fg1`.`aqi` `aqi`, `fg1`.`date` `date`, `fg1`.`iaqi_h` `iaqi_h`, `fg1`.`iaqi_p` `iaqi_p`, `fg1`.`iaqi_pm10` `iaqi_pm10`, `fg1`.`iaqi_t` `iaqi_t`, `fg1`.`o3_avg` `o3_avg`, `fg1`.`o3_max` `o3_max`, `fg1`.`o3_min` `o3_min`, `fg1`.`pm10_avg` `pm10_avg`, `fg1`.`pm10_max` `pm10_max`, `fg1`.`pm10_min` `pm10_min`, `fg1`.`pm25_avg` `pm25_avg`, `fg1`.`pm25_max` `pm25_max`, `fg1`.`pm25_min` `pm25_min`, `fg1`.`uvi_avg` `uvi_avg`, `fg1`.`uvi_max` `uvi_max`, `fg1`.`uvi_min` `uvi_min`, `fg1`.`city` `join_pk_city`, `fg1`.`date` `join_pk_date`, `fg1`.`date` `join_evt_date`, `fg0`.`tempmax` `tempmax`, `fg0`.`tempmin` `tempmin`, `fg0`.`temp` `temp`, `fg0`.`feelslikemax` `feelslikemax`, `fg0`.`feelslikemin` `feelslikemin`, `fg0`.`feelslike` `feelslike`, `fg0`.`dew` `dew`, `fg0`.`humidity` `humidity`, `fg0`.`precip` `precip`, `fg0`.`precipprob` `precipprob`, `fg0`.`precipcover` `precipcover`, `fg0`.`snow` `snow`, `fg0`.`snowdepth` `snowdepth`, `fg0`.`windgust` `windgust`, `fg0`.`windspeed` `windspeed`, `fg0`.`winddir` `winddir`, `fg0`.`pressure` `pressure`, `fg0`.`cloudcover` `cloudcover`, `fg0`.`visibility` `visibility`, `fg0`.`solarradiation` `solarradiation`, `fg0`.`solarenergy` `solarenergy`, `fg0`.`uvindex` `uvindex`, `fg0`.`conditions` `conditions`, RANK() OVER (PARTITION BY `fg0`.`city`, `fg0`.`date`, `fg1`.`date` ORDER BY `fg0`.`date` DESC) pit_rank_hopsworks\n",
       "FROM `maksym00_featurestore`.`air_quality_fg_1` `fg1`\n",
-      "INNER JOIN `maksym00_featurestore`.`weather_fg_1` `fg0` ON `fg1`.`index` = `fg0`.`index` AND `fg1`.`city` = `fg0`.`city` AND `fg1`.`date` = `fg0`.`date` AND `fg1`.`date` >= `fg0`.`date`) NA\n",
-      "WHERE `pit_rank_hopsworks` = 1) (SELECT `right_fg0`.`index` `index`, `right_fg0`.`city` `city`, `right_fg0`.`aqi` `aqi`, `right_fg0`.`date` `date`, `right_fg0`.`iaqi_h` `iaqi_h`, `right_fg0`.`iaqi_p` `iaqi_p`, `right_fg0`.`iaqi_pm10` `iaqi_pm10`, `right_fg0`.`iaqi_t` `iaqi_t`, `right_fg0`.`o3_avg` `o3_avg`, `right_fg0`.`o3_max` `o3_max`, `right_fg0`.`o3_min` `o3_min`, `right_fg0`.`pm10_avg` `pm10_avg`, `right_fg0`.`pm10_max` `pm10_max`, `right_fg0`.`pm10_min` `pm10_min`, `right_fg0`.`pm25_avg` `pm25_avg`, `right_fg0`.`pm25_max` `pm25_max`, `right_fg0`.`pm25_min` `pm25_min`, `right_fg0`.`uvi_avg` `uvi_avg`, `right_fg0`.`uvi_max` `uvi_max`, `right_fg0`.`uvi_min` `uvi_min`, `right_fg0`.`tempmax` `tempmax`, `right_fg0`.`tempmin` `tempmin`, `right_fg0`.`temp` `temp`, `right_fg0`.`feelslikemax` `feelslikemax`, `right_fg0`.`feelslikemin` `feelslikemin`, `right_fg0`.`feelslike` `feelslike`, `right_fg0`.`dew` `dew`, `right_fg0`.`humidity` `humidity`, `right_fg0`.`precip` `precip`, `right_fg0`.`precipprob` `precipprob`, `right_fg0`.`precipcover` `precipcover`, `right_fg0`.`snow` `snow`, `right_fg0`.`snowdepth` `snowdepth`, `right_fg0`.`windgust` `windgust`, `right_fg0`.`windspeed` `windspeed`, `right_fg0`.`winddir` `winddir`, `right_fg0`.`pressure` `pressure`, `right_fg0`.`cloudcover` `cloudcover`, `right_fg0`.`visibility` `visibility`, `right_fg0`.`solarradiation` `solarradiation`, `right_fg0`.`solarenergy` `solarenergy`, `right_fg0`.`uvindex` `uvindex`, `right_fg0`.`conditions` `conditions`\n",
+      "INNER JOIN `maksym00_featurestore`.`weather_fg_1` `fg0` ON `fg1`.`city` = `fg0`.`city` AND `fg1`.`date` = `fg0`.`date` AND `fg1`.`date` >= `fg0`.`date`) NA\n",
+      "WHERE `pit_rank_hopsworks` = 1) (SELECT `right_fg0`.`city` `city`, `right_fg0`.`aqi` `aqi`, `right_fg0`.`date` `date`, `right_fg0`.`iaqi_h` `iaqi_h`, `right_fg0`.`iaqi_p` `iaqi_p`, `right_fg0`.`iaqi_pm10` `iaqi_pm10`, `right_fg0`.`iaqi_t` `iaqi_t`, `right_fg0`.`o3_avg` `o3_avg`, `right_fg0`.`o3_max` `o3_max`, `right_fg0`.`o3_min` `o3_min`, `right_fg0`.`pm10_avg` `pm10_avg`, `right_fg0`.`pm10_max` `pm10_max`, `right_fg0`.`pm10_min` `pm10_min`, `right_fg0`.`pm25_avg` `pm25_avg`, `right_fg0`.`pm25_max` `pm25_max`, `right_fg0`.`pm25_min` `pm25_min`, `right_fg0`.`uvi_avg` `uvi_avg`, `right_fg0`.`uvi_max` `uvi_max`, `right_fg0`.`uvi_min` `uvi_min`, `right_fg0`.`tempmax` `tempmax`, `right_fg0`.`tempmin` `tempmin`, `right_fg0`.`temp` `temp`, `right_fg0`.`feelslikemax` `feelslikemax`, `right_fg0`.`feelslikemin` `feelslikemin`, `right_fg0`.`feelslike` `feelslike`, `right_fg0`.`dew` `dew`, `right_fg0`.`humidity` `humidity`, `right_fg0`.`precip` `precip`, `right_fg0`.`precipprob` `precipprob`, `right_fg0`.`precipcover` `precipcover`, `right_fg0`.`snow` `snow`, `right_fg0`.`snowdepth` `snowdepth`, `right_fg0`.`windgust` `windgust`, `right_fg0`.`windspeed` `windspeed`, `right_fg0`.`winddir` `winddir`, `right_fg0`.`pressure` `pressure`, `right_fg0`.`cloudcover` `cloudcover`, `right_fg0`.`visibility` `visibility`, `right_fg0`.`solarradiation` `solarradiation`, `right_fg0`.`solarenergy` `solarenergy`, `right_fg0`.`uvindex` `uvindex`, `right_fg0`.`conditions` `conditions`\n",
       "FROM right_fg0)\n"
      ]
     },
@@ -132,7 +132,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>city</th>\n",
        "      <th>aqi</th>\n",
        "      <th>date</th>\n",
@@ -142,6 +141,7 @@
        "      <th>iaqi_t</th>\n",
        "      <th>o3_avg</th>\n",
        "      <th>o3_max</th>\n",
+       "      <th>o3_min</th>\n",
        "      <th>...</th>\n",
        "      <th>windgust</th>\n",
        "      <th>windspeed</th>\n",
@@ -158,79 +158,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Kyiv</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1662411600000</td>\n",
-       "      <td>98.78</td>\n",
-       "      <td>1022.7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>13.91</td>\n",
-       "      <td>19</td>\n",
-       "      <td>27</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>267.0</td>\n",
-       "      <td>1022.3</td>\n",
-       "      <td>34.8</td>\n",
-       "      <td>24.1</td>\n",
-       "      <td>227.5</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Partially cloudy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Kyiv</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1662498000000</td>\n",
-       "      <td>65.58</td>\n",
-       "      <td>1020.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21.02</td>\n",
-       "      <td>22</td>\n",
-       "      <td>32</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.5</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>267.0</td>\n",
-       "      <td>1022.3</td>\n",
-       "      <td>34.8</td>\n",
-       "      <td>24.1</td>\n",
-       "      <td>227.5</td>\n",
-       "      <td>19.6</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Partially cloudy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Kyiv</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1662584400000</td>\n",
-       "      <td>99.90</td>\n",
-       "      <td>1017.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12.45</td>\n",
-       "      <td>22</td>\n",
-       "      <td>32</td>\n",
-       "      <td>...</td>\n",
-       "      <td>24.8</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>132.9</td>\n",
-       "      <td>1019.4</td>\n",
-       "      <td>48.4</td>\n",
-       "      <td>24.1</td>\n",
-       "      <td>217.9</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Partially cloudy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Kyiv</td>\n",
        "      <td>2</td>\n",
        "      <td>1662670800000</td>\n",
@@ -240,6 +167,7 @@
        "      <td>10.00</td>\n",
        "      <td>20</td>\n",
        "      <td>33</td>\n",
+       "      <td>6</td>\n",
        "      <td>...</td>\n",
        "      <td>36.4</td>\n",
        "      <td>14.8</td>\n",
@@ -253,57 +181,129 @@
        "      <td>Rain, Partially cloudy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Kyiv</td>\n",
        "      <td>4</td>\n",
+       "      <td>1662584400000</td>\n",
+       "      <td>99.90</td>\n",
+       "      <td>1017.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12.45</td>\n",
+       "      <td>22</td>\n",
+       "      <td>32</td>\n",
+       "      <td>10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24.8</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>132.9</td>\n",
+       "      <td>1019.4</td>\n",
+       "      <td>48.4</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>217.9</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Partially cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Kyiv</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1662498000000</td>\n",
+       "      <td>65.58</td>\n",
+       "      <td>1020.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.02</td>\n",
+       "      <td>22</td>\n",
+       "      <td>32</td>\n",
+       "      <td>10</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>267.0</td>\n",
+       "      <td>1022.3</td>\n",
+       "      <td>34.8</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>227.5</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Partially cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Kyiv</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1662411600000</td>\n",
+       "      <td>98.78</td>\n",
+       "      <td>1022.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13.91</td>\n",
+       "      <td>19</td>\n",
+       "      <td>27</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>267.0</td>\n",
+       "      <td>1022.3</td>\n",
+       "      <td>34.8</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>227.5</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Partially cloudy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
        "      <td>Malmo</td>\n",
        "      <td>23</td>\n",
-       "      <td>1662411600000</td>\n",
-       "      <td>54.50</td>\n",
-       "      <td>1019.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>17.30</td>\n",
-       "      <td>27</td>\n",
+       "      <td>1662670800000</td>\n",
+       "      <td>86.00</td>\n",
+       "      <td>1006.3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12.70</td>\n",
+       "      <td>33</td>\n",
+       "      <td>35</td>\n",
        "      <td>32</td>\n",
        "      <td>...</td>\n",
-       "      <td>44.6</td>\n",
-       "      <td>23.7</td>\n",
-       "      <td>97.9</td>\n",
-       "      <td>1018.4</td>\n",
-       "      <td>69.0</td>\n",
-       "      <td>15.2</td>\n",
-       "      <td>157.3</td>\n",
-       "      <td>13.7</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Partially cloudy</td>\n",
+       "      <td>46.1</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>1010.3</td>\n",
+       "      <td>87.1</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>171.3</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Rain, Partially cloudy</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 43 columns</p>\n",
+       "<p>5 rows × 42 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index   city  aqi           date  iaqi_h  iaqi_p  iaqi_pm10  iaqi_t  \\\n",
-       "0      0   Kyiv    6  1662411600000   98.78  1022.7          2   13.91   \n",
-       "1      1   Kyiv    2  1662498000000   65.58  1020.0          1   21.02   \n",
-       "2      2   Kyiv    4  1662584400000   99.90  1017.6          2   12.45   \n",
-       "3      3   Kyiv    2  1662670800000   99.90  1021.3          1   10.00   \n",
-       "4      4  Malmo   23  1662411600000   54.50  1019.0          4   17.30   \n",
+       "    city  aqi           date  iaqi_h  iaqi_p  iaqi_pm10  iaqi_t  o3_avg  \\\n",
+       "0   Kyiv    2  1662670800000   99.90  1021.3          1   10.00      20   \n",
+       "1   Kyiv    4  1662584400000   99.90  1017.6          2   12.45      22   \n",
+       "2   Kyiv    2  1662498000000   65.58  1020.0          1   21.02      22   \n",
+       "3   Kyiv    6  1662411600000   98.78  1022.7          2   13.91      19   \n",
+       "4  Malmo   23  1662670800000   86.00  1006.3          7   12.70      33   \n",
        "\n",
-       "   o3_avg  o3_max  ...  windgust  windspeed  winddir  pressure  cloudcover  \\\n",
-       "0      19      27  ...      24.5        9.7    267.0    1022.3        34.8   \n",
-       "1      22      32  ...      24.5        9.7    267.0    1022.3        34.8   \n",
-       "2      22      32  ...      24.8        9.7    132.9    1019.4        48.4   \n",
-       "3      20      33  ...      36.4       14.8     87.8    1022.5        71.8   \n",
-       "4      27      32  ...      44.6       23.7     97.9    1018.4        69.0   \n",
+       "   o3_max  o3_min  ...  windgust  windspeed  winddir  pressure  cloudcover  \\\n",
+       "0      33       6  ...      36.4       14.8     87.8    1022.5        71.8   \n",
+       "1      32      10  ...      24.8        9.7    132.9    1019.4        48.4   \n",
+       "2      32      10  ...      24.5        9.7    267.0    1022.3        34.8   \n",
+       "3      27      11  ...      24.5        9.7    267.0    1022.3        34.8   \n",
+       "4      35      32  ...      46.1       28.0    127.0    1010.3        87.1   \n",
        "\n",
        "   visibility  solarradiation  solarenergy  uvindex              conditions  \n",
-       "0        24.1           227.5         19.6      7.0        Partially cloudy  \n",
-       "1        24.1           227.5         19.6      7.0        Partially cloudy  \n",
-       "2        24.1           217.9         18.7      7.0        Partially cloudy  \n",
-       "3        24.1           146.3         12.6      5.0  Rain, Partially cloudy  \n",
-       "4        15.2           157.3         13.7      5.0        Partially cloudy  \n",
+       "0        24.1           146.3         12.6      5.0  Rain, Partially cloudy  \n",
+       "1        24.1           217.9         18.7      7.0        Partially cloudy  \n",
+       "2        24.1           227.5         19.6      7.0        Partially cloudy  \n",
+       "3        24.1           227.5         19.6      7.0        Partially cloudy  \n",
+       "4        17.1           171.3         14.8      6.0  Rain, Partially cloudy  \n",
        "\n",
-       "[5 rows x 43 columns]"
+       "[5 rows x 42 columns]"
       ]
      },
      "execution_count": 3,
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "query = air_quality_fg.select_all().join(weather_fg.select_all(),on = ['index','city','date'])\n",
+    "query = air_quality_fg.select_all().join(weather_fg.select_all())\n",
     "\n",
     "query_show = query.show(5)\n",
     "col_names = query_show.columns\n",
@@ -375,7 +375,7 @@
    "outputs": [],
    "source": [
     "# Load transformation functions.\n",
-    "min_max_scaler = fs.get_transformation_function(name = 'standard_scaler')\n",
+    "standard_scaler = fs.get_transformation_function(name = 'standard_scaler')\n",
     "label_encoder = fs.get_transformation_function(name = 'label_encoder')"
    ]
   },
@@ -386,10 +386,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_cols = ['index','city','date','conditions']\n",
+    "category_cols = ['city','date','conditions']\n",
     "\n",
-    "mapping_transformers = {col_name:min_max_scaler for col_name in col_names if col_name not in category_cols}\n",
-    "category_cols = {col_name:label_encoder for col_name in category_cols if col_name not in ['index','date']}\n",
+    "mapping_transformers = {col_name:standard_scaler for col_name in col_names if col_name not in category_cols}\n",
+    "category_cols = {col_name:label_encoder for col_name in category_cols if col_name != 'date'}\n",
     "\n",
     "mapping_transformers.update(category_cols)"
    ]
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "299bd245",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
      "output_type": "stream",
      "text": [
       "Training dataset job started successfully, you can follow the progress at \n",
-      "https://c.app.hopsworks.ai/p/167/jobs/named/air_quality_fv_1_1_create_fv_td_11092022184332/executions\n"
+      "https://c.app.hopsworks.ai/p/167/jobs/named/air_quality_fv_1_1_create_fv_td_12092022122417/executions\n"
      ]
     },
     {
@@ -529,10 +529,10 @@
     {
      "data": {
       "text/plain": [
-       "(1, <hsfs.core.job.Job at 0x7fc28d172670>)"
+       "(1, <hsfs.core.job.Job at 0x7fc9469a46d0>)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
